Fixed scrollbar transparency and removed MUI Box.

--- a/client/src/styles/components/table.scss
+++ b/client/src/styles/components/table.scss
@@ -19,7 +19,7 @@ td{
 
 th{
 	position: sticky;
-	top: 89px;
+	top: 88px;
 	border-bottom: 3px solid $color-burgundy;
 }
 
@@ -82,10 +82,30 @@ select {
 
 // duck table styling //
 .tableContainer{
-    overflow-x: scroll;
-    overflow-y: scroll;
+    //overflow-x: overlay;
+    //overflow-y: overlay;
+	overflow: overlay;
     height: 100vh;
     width: 100vw;
+
+	//overflow-y: ;
+	&::-webkit-scrollbar{
+		width: 5px;
+		height: 5px;
+	}
+	//
+	&::-webkit-scrollbar-track{
+		background: transparent;
+	}
+	&::-webkit-scrollbar-thumb{
+		background-color: #400000;
+		border-radius: 10px;
+		border: transparent;
+	}
+	&::-webkit-scrollbar-corner{
+		background: transparent;
+	}
+	scrollbar-color: #400000 transparent;
 }
 
 .columnTitle{
